# image-classification-CNN

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
.uv/: config.toml
