[project]
name = "image-classification-ml-cnn"
version = "0.1.0"
description = "Image classification CNN demo and Streamlit app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow>=2.18.0",
    "streamlit>=1.40.0",
    "pillow>=11.0.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
]
